[package]
authors = ["Ken <kwill1253@gmail.com>"]
edition = "2018"
name = "ccount"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
futures-util = "0.3.13"
hyper = {version = "0.14", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
version = "0.3.4"
