[package]
authors = ["Ken <kwill1253@gmail.com>"]
edition = "2018"
name = "ccount"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
# tokio = {version = "1", features = ["full"]}
# wasm-bindgen = "0.2"
futures = "0.3"
wasm-bindgen = {version = "0.2.72", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.22"

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "HtmlInputElement",
]
version = "0.3.4"
